[1.20.1] fix lang data reading